# api-tools

./: .gitignore  Cargo.toml  README.md  get-python.sh  package.sh
.github/workflows/: rust.yml
auth/oauth_flow/: Cargo.toml
auth/oauth_flow/src/: error.rs  lib.rs  structs.rs
auth/oauth_flow/src/routes/: authorize.rs  callback.rs
binary/apicli/: Cargo.toml
binary/apicli/src/: commands.rs  config.rs  constants.rs  engine.rs  main.rs  path.rs  stub.rs  template.rs
binary/apid/: Cargo.toml
binary/apid/src/: config.rs  constants.rs  main.rs  util.rs
binary/apid/src/workers/: loader.rs  mod.rs  watcher.rs
common/data_structures/: Cargo.toml
common/data_structures/src/: lib.rs  trie.rs
entities/core/: Cargo.toml  build.rs
entities/core/src/proto/: service.proto
entities/credentials/: Cargo.toml  build.rs
entities/credentials/src/proto/: credentials.proto
entities/engine/: Cargo.toml  build.rs
entities/engine/proto/: engine.proto
entities/engine/src/: lib.rs
etc/: apicli-config.toml  apicli.localhost-key.pem  apicli.localhost.pem  apid-config.toml
runners/api_caller/: Cargo.toml
runners/api_caller/src/: constants.rs  error.rs  lib.rs
runners/filtered_runner/: Cargo.toml
runners/filtered_runner/src/: error.rs  lib.rs
runners/javascript_runner/: Cargo.toml
runners/javascript_runner/src/: constants.rs  converters.rs  error.rs  lib.rs
runners/python_runner/: Cargo.toml
runners/python_runner/src/: bindings.rs  constants.rs  converters.rs  error.rs  lib.rs  pyconf.rs
runners/script_runner/: Cargo.toml
runners/user_input/: Cargo.toml
runners/user_input/src/: error.rs  lib.rs
scripts/: apigen  apilite  swagger_convert
storage/in_memory_storage/: Cargo.toml
storage/in_memory_storage/src/: error.rs  lib.rs  repo.rs
storage/local_file_loader/: Cargo.toml
storage/local_file_loader/src/: lib.rs
usecases/execution_engine/: Cargo.toml
usecases/execution_engine/src/: constants.rs  error.rs  lib.rs  services.rs
usecases/service_loader/: Cargo.toml
usecases/service_loader/src/: constants.rs  error.rs  lib.rs
usecases/service_loader/src/loaders/: mod.rs
usecases/service_loader/src/loaders/openapi/: mod.rs  utils.rs
usecases/service_loader/src/loaders/openapi/stubs/: array_schema.yaml  basic_path.yaml  basic_path_with_double_ref.yaml  basic_path_with_double_remote_ref.yaml  basic_path_with_local_ref.yaml  basic_path_with_ref.yaml  basic_path_with_ref_cycle.yaml  basic_path_with_remote_ref.yaml  basic_root.yaml  basic_schema.yaml  basic_schema_with_ref.yaml  object_schema.yaml  oneof_schema.yaml  oneof_schema_with_ref.yaml  path_item_pagination.yaml  path_item_parameters.yaml  path_item_parameters_ref.yaml  path_item_request_body.yaml  path_item_request_body_ref.yaml  path_item_responses.yaml  path_item_responses_ref.yaml  remote_doc.yaml  schema_with_ref_cycle.yaml
usecases/service_writer/: Cargo.toml
usecases/service_writer/src/: error.rs  lib.rs
