[package]
name = "oauth_flow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version="0.5.0-rc.2", features=["tls"] }
reqwest = { version="0.11.14", features=["json"] }
base64 = "0.21.0"
serde_json = "1.0"
jmespath = "0.3.0"
protobuf-json-mapping = "3.2"

core_entities = { path = "../../entities/core" }
credential_entities = { path = "../../entities/credentials" }

thiserror = "1.0"

