[package]
name = "apid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tonic = "0.9"
prost = "0.11"
protobuf = "3.2"
tokio = { version = "1", features = [ "full" ] }
notify = { version = "5.1", default-features = false, features = ["macos_kqueue"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
serde_json = "1.0"
uuid = { version = "1.3", features = [ "v4" ] }

engine_entities = { path = "../../entities/engine" }
core_entities = { path = "../../entities/core" }
credential_entities = { path = "../../entities/credentials" }

service_loader = { path = "../../usecases/service_loader" }
service_writer = { path = "../../usecases/service_writer" }
execution_engine = { path = "../../usecases/execution_engine" }
# query_engine = { path = "../../usecases/query_engine" }

in_memory_storage = { path = "../../storage/in_memory_storage" }
local_file_loader = { path = "../../storage/local_file_loader" }

api_caller = { path = "../../runners/api_caller" }
python_runner = { path = "../../runners/python_runner" }
javascript_runner = { path = "../../runners/javascript_runner" }
user_input = { path = "../../runners/user_input" }
filtered_runner = { path = "../../runners/filtered_runner" }

common_data_structures = { path = "../../common/data_structures" }

anyhow = { version="1.0", features = ["backtrace"] }

dhat = "0.3.2"

[features]
dhat-heap = []
dhat-ad-hoc = []

default = ["python", "input", "javascript", "wrapper"]
python = []
javascript = []
input = []
wrapper = []

