[package]
name = "api_caller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features=["blocking", "json"] }
serde_json = "1.0"
jsonptr = "0.4.2"
base64 = "0.21.0"
http = "0.2"
url = "2.2.0"
chrono = { version = "0.4.24" }
urlencoding = "2.1"

execution_engine = { path = "../../usecases/execution_engine" }
core_entities = { path = "../../entities/core" }
credential_entities = { path = "../../entities/credentials" }

thiserror = "1.0"
