[package]
name = "filtered_runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
jmespath = "0.3"
lazy_static = "1.4"
regex = "1.7"

thiserror = "1.0"

execution_engine = { path = "../../usecases/execution_engine" }
core_entities = { path = "../../entities/core" }
credential_entities = { path = "../../entities/credentials" }

