[package]
name = "local_file_loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
service_loader = { path = "../../usecases/service_loader" }
service_writer = { path = "../../usecases/service_writer" }

thiserror = "1.0"
