[package]
name = "service_loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0", features=["derive"] }
serde_yaml = "0.9"
serde_json = { version="1.0", features=["preserve_order"] }
jsonptr = "0.4.2"
uriparse = "0.6"

protobuf = "3.2"
protobuf-json-mapping = "3.2"

credential_entities = { path = "../../entities/credentials" }
core_entities = { path = "../../entities/core" }

thiserror = "1.0"
anyhow = "1.0"

